## $Id$

# toolbar icons
TOOLBAR = \
	brkpt.xpm \
	pgmfinish.xpm \
	pgmnext.xpm \
	pgmnexti.xpm \
	pgmrun.xpm \
	pgmstep.xpm \
	pgmstepi.xpm \
	execopen.xpm \
	search.xpm

# line items and other pictograms
PICTOGRAMS = \
	brkena.xpm \
	brkdis.xpm \
	brktmp.xpm \
	brkcond.xpm \
	pcinner.xpm \
	pcup.xpm \
	regs.xpm \
	watch.xpm \
	watchcoded.xpm \
	watchena.xpm \
	watchdis.xpm \
	pointer.xpm


pics_DATA = $(TOOLBAR) $(PICTOGRAMS)
picsdir = $(kde_datadir)/kdbg/pics
KDE_ICON = AUTO
