## $Id$

# toolbar icons

kdbgiconsdir = $(kde_datadir)/kdbg/icons
kdbgicons_ICON = \
	brkpt \
	pgmfinish \
	pgmnext \
	pgmnexti \
	pgmrun \
	pgmstep \
	pgmstepi \
	execopen

# line items and other pictograms
PICTOGRAMS = \
	brkena.xpm \
	brkdis.xpm \
	brktmp.xpm \
	brkcond.xpm \
	brkorph.xpm \
	pcinner.xpm \
	pcup.xpm \
	regs.xpm \
	watch.xpm \
	watchcoded.xpm \
	watchena.xpm \
	watchdis.xpm \
	pointer.xpm


pics_DATA = $(PICTOGRAMS)
picsdir = $(kde_datadir)/kdbg/pics

# application icon
KDE_ICON = kdbg
